--- a/meta-odroid-extras/conf/layer.conf
+++ b/meta-odroid-extras/conf/layer.conf
@@ -12,7 +12,7 @@ BBFILE_PRIORITY_odroid-extras = "6"
 LAYERDEPENDS_odroid-extras = "core odroid-layer"
 LAYERRECOMMENDS_odroid-extras = "openembedded-layer"
 
-LAYERSERIES_COMPAT_odroid-extras = "kirkstone langdale"
+LAYERSERIES_COMPAT_odroid-extras = "mickledore"
 
 BBFILES_DYNAMIC += " \
     qt5-layer:${LAYERDIR}/dynamic-layers/qt5-layer/*/*/*.bb \
