odroid: fix the need to :remove
We ended up with more MACHINES remove secure-ordroid so
re-org thing to remove that need and just add where needed.

Signed-off-by: Armin Kuster <akuster808@gmail.com>

--- a/conf/machine/odroid-c2.conf
+++ b/conf/machine/odroid-c2.conf
@@ -29,3 +29,5 @@ PREFERRED_PROVIDER_virtual/libgles2 = "${PREFERRED_PROVIDER_virtual/gpu}"
 PREFERRED_PROVIDER_virtual/libopencl = "${PREFERRED_PROVIDER_virtual/gpu}"
 PREFERRED_PROVIDER_virtual/libgl = "${VIRTUAL-RUNTIME_mesa}"
 PREFERRED_PROVIDER_virtual/mesa = "${VIRTUAL-RUNTIME_mesa}"
+
+EXTRA_IMAGEDEPENDS:append = " secure-odroid"
