--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -117,6 +117,11 @@ odroid-hc4:
   script:
   - kas build --target core-image-minimal  kas/$CI_JOB_NAME.yml
 
+odroid-n2l:
+  extends: .meson64
+  script:
+  - kas build --target core-image-minimal  kas/$CI_JOB_NAME.yml
+
 odroid-h2:
   extends: .x86
   script:
