--- a/recipes-kernel/linux/linux-yocto-6.1/odroid-kmeta/bsp/meson/meson64-common.cfg
+++ b/recipes-kernel/linux/linux-yocto-6.1/odroid-kmeta/bsp/meson/meson64-common.cfg
@@ -39,7 +39,6 @@ CONFIG_PHY_MESON_GXL_USB2=y
 CONFIG_MESON_SM=y
 CONFIG_EARLY_PRINTK=y
 CONFIG_PHYLIB=y
-CONFIG_MDIO_DEVICE=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_STMMAC_ETH=y
@@ -54,3 +53,4 @@ CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SPI=y
 CONFIG_VT_CONSOLE=y
 CONFIG_USB_RTL8152=y
+CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
