odroid/machines: update to suppoorting 6.6
Signed-off-by: Armin Kuster <akuster808@gmail.com>

--- a/conf/machine/odroid-c1.conf
+++ b/conf/machine/odroid-c1.conf
@@ -20,7 +20,7 @@ UBOOT_SYMLINK ?= "u-boot-${MACHINE}.${UBOOT_SUFFIX}"
 UBOOT_ENTRYPOINT = "00208000"
 KERNEL_EXTRA_ARGS += "LOADADDR=${UBOOT_ENTRYPOINT}"
 
-KERNEL_DEVICETREE ?= "meson8b-odroidc1.dtb"
+KERNEL_DEVICETREE ?= "amlogic/meson8b-odroidc1.dtb"
 
 KERNEL_IMAGETYPE = "uImage"
 BOOT_IMAGE ?= "uImage"
@@ -36,6 +36,6 @@ BOOT_PREFIX = ""
 UBOOT_LOAD_CMD = "fatload"
 UBOOT_MULTI_BOOT = "0"
 
-IMAGE_BOOT_FILES = "${BOOT_IMAGE} ${UBOOT_SCRIPT} ${KERNEL_DEVICETREE}"
+IMAGE_BOOT_FILES = "${BOOT_IMAGE} ${UBOOT_SCRIPT}"
 
 WKS_FILE ?= "odroid-c1.wks"
