--- a/conf/machine/odroid-hc1.conf
+++ b/conf/machine/odroid-hc1.conf
@@ -6,7 +6,7 @@
 
 include conf/machine/include/odroid-xu-default.inc
 
-KERNEL_DEVICETREE = "exynos5422-odroidhc1.dtb"
+KERNEL_DEVICETREE = "samsung/exynos5422-odroidhc1.dtb"
 UBOOT_MACHINE:odroid-hc1 = "odroid-xu3_defconfig"
 
 DISTRO_FEATURES:remove = "x11"
