--- a/conf/machine/odroid-xu3.conf
+++ b/conf/machine/odroid-xu3.conf
@@ -6,5 +6,5 @@
 
 include conf/machine/include/odroid-xu-default.inc
 
-KERNEL_DEVICETREE ?= "exynos5422-odroidxu3.dtb"
+KERNEL_DEVICETREE ?= "samsung/exynos5422-odroidxu3.dtb"
 UBOOT_MACHINE:odroid-xu3 = "odroid-xu3_defconfig"
